--- a/Ejercicio_02.html
+++ b/Ejercicio_02.html
@@ -10,19 +10,19 @@
       <li>1 Mozarella</li>
       <li>1 Cola Drink</li>
       <li>Price: €5</li>
-      <li><a href="mailto:example@example.com?subject=Order%20of%20Promo%201&body=Order%20Number:"Promo 1"001%0AName:%0AAddress:%0AMobile%20Phone:%0AHome%20Phone:%0ACoordinates:%0AComments:">Buy</a></li>
+      <li><a href="mailto:example@example.com?subject=Order%20of%20Promo%201&body=Order%20Number:Promo_01001%0AName:%0AAddress:%0AMobile%20Phone:%0AHome%20Phone:%0ACoordinates:%0AComments:">Buy</a></li>
     </ul>
     <h2>Promo 2</h2>
     <ul>
       <li>2 Mozarellas</li>
       <li>Price: €6</li>
-      <li><a href="mailto:example@example.com?subject=Order%20of%20Promo%202&body=Order%20Number:%0AName:%0AAddress:%0AMobile%20Phone:%0AHome%20Phone:%0ACoordinates:%0AComments:">Buy</a></li>
+      <li><a href="mailto:example@example.com?subject=Order%20of%20Promo%202&body=Order%20Number:Promo_02%0AName:%0AAddress:%0AMobile%20Phone:%0AHome%20Phone:%0ACoordinates:%0AComments:">Buy</a></li>
     </ul>
     <h2>Promo 3</h2>
     <ul>
       <li>3 Mozarellas</li>
       <li>Price: €10</li>
-      <li><a href="mailto:example@example.com?subject=Order%20of%20Promo%203&body=Order%20Number:%0AName:%0AAddress:%0AMobile%20Phone:%0AHome%20Phone:%0ACoordinates:%0AComments:">Buy</a></li>
+      <li><a href="mailto:example@example.com?subject=Order%20of%20Promo%203&body=Order%20Number:Promo_03%0AName:%0AAddress:%0AMobile%20Phone:%0AHome%20Phone:%0ACoordinates:%0AComments:">Buy</a></li>
     </ul>
   </body>
 </html>
